<resources>
    <string name="app_name">Sensor Data Collector</string>
    <string name="app_toast_running1">The app is still running and collecting &#8230;</string>
    <string name="app_toast_running2">The app is still running but all sensors are disabled.</string>
    <string name="app_toast_destroy1">Sensor Wearable Apps were instructed to destroyed themselves!</string>
    <string name="app_toast_destroy2">Sensor Data Collector destroyed! All Sensors were disabled.</string>
    <string name="app_toast_bluetooth">Device out of range! Bluetooth connection lost.</string>
    <string name="app_toast_bluetooth_reestablished">Bluetooth connection re-established.</string>
    <string name="app_icon_antenna">Overview</string>
    <string name="app_icon_statistics">Analyze</string>
    <string name="app_icon_services">Services</string>
    <string name="service_name">SensorDataCollectorService</string>
    <string name="service_permission_exit">Sorry, the app is not runnable if not all permissions are granted. If you do not trust us, you can inspect the source code on Github and compile the app by yourself. Thank you.</string>
    <string name="main_overview">Overview</string>
    <string name="main_overview_sensors">Sensors</string>
    <string name="main_overview_sensors_description">Number of active sensors</string>
    <string name="main_overview_power">Power</string>
    <string name="main_overview_power_description">Additional power consumption</string>
    <string name="main_overview_power_description2">Excluding</string>
    <string name="main_overview_database">Database</string>
    <string name="main_overview_database_description">Size of database</string>
    <string name="main_overview_smartwatch">Devices</string>
    <string name="main_overview_smartwatch_description">Overview of all available devices</string>
    <string name="main_collectors">Collectors</string>
    <string name="main_collectors_sensors">Sensor management</string>
    <string name="main_collectors_activities">Labeling</string>
    <string name="main_collectors_correction">Correction/Note</string>
    <string name="device_title">Devices</string>
    <string name="device_localdevice">Local Device</string>
    <string name="sensor_selftest_title">SensorSelfTest</string>
    <string name="sensor_selftest_notify1">Stop sensor before starting selftest!</string>
    <string name="sensor_selftest_notify2">Test not implemented!</string>
    <string name="sensor_selftest_calc">Calculation of frequency</string>
    <string name="sensor_selftest_x">X</string>
    <string name="sensor_selftest_y">Y</string>
    <string name="sensor_selftest_z">Z</string>
    <string name="sensor_selftest_frequency">Frequency</string>
    <string name="sensor_selftest_button">Test</string>
    <string name="sensor_selftest_notdetected">not detected!</string>
    <string name="sensor_frequency_notify">Stop sensor before changing frequency!</string>
    <string name="sensor_frequency_dialog_title">Frequency</string>
    <string name="sensor_frequency_dialog_text">Please insert frequency in <u><i><b>Hz</b></i></u>:\n(The app will freeze if the value is to high!)</string>
    <string name="sensor_frequency_dialog_text2">Please insert frequency in <u><i><b>ms</b></i></u>:\n(This sensor may responds slower than specified!)</string>
    <string name="sensor_frequency_dialog_button_ok">OK</string>
    <string name="sensor_frequency_dialog_button_cancel">Cancel</string>
    <string name="sensor_frequency_changed_success">Frequency saved successful!</string>
    <string name="sensor_frequency_changed_failed">No valid number!</string>
    <string name="sensor_frequency_button">Freq</string>
    <string name="sensor_collector_gps_notify">GPS not enabled or not available! Please activate first!</string>
    <string name="sensor_collector_gps_permission">The location permissions were revoked! Please reinstate them.</string>
    <string name="sensor_collector_generel_notify1">Error at deregistering sensor! Maybe restart program?</string>
    <string name="sensor_collector_generel_notify2">Sensor support not implemented!</string>
    <string name="sensor_collector_custom_notify">CustomCollector Error!</string>
    <string name="sensor_collector_reenable_notify">Recently used sensors reactivated!</string>
    <string name="sensor_cache_to_database">Write data in database &#8230;</string>
    <string name="sensor_cache_to_database_done">Done</string>
    <string name="sensor_microphone_error">Error! The microphone could not be initialized!</string>
    <string name="sensor_video_error">Error! The video camera could not be initialized!</string>
    <string name="sensor_video_storage">All video data is directly written in your storage.</string>
    <string name="activity_environment_title">Environment</string>
    <string name="activity_environment_select">Select Environment</string>
    <string name="activity_environment_none">Not Specified</string>
    <string name="activity_environment_home">Home</string>
    <string name="activity_environment_office">Office/Workplace</string>
    <string name="activity_environment_office_old">Office</string>
    <string name="activity_environment_transporation">Transportation</string>
    <string name="activity_environment_building">Building</string>
    <string name="activity_environment_street">Street/Road/Pasture</string>
    <string name="activity_posture_title">Posture</string>
    <string name="activity_posture_select">Select Posture</string>
    <string name="activity_posture_none">Not Specified</string>
    <string name="activity_posture_walking">Walking</string>
    <string name="activity_posture_running">Running</string>
    <string name="activity_posture_sitting">Sitting</string>
    <string name="activity_posture_standing">Standing</string>
    <string name="activity_posture_lying">Lying</string>
    <string name="activity_posture_climbingup">Climbing (up)</string>
    <string name="activity_posture_climbingdown">Climbing (down)</string>
    <string name="activity_posture_jumping">Jumping</string>
    <string name="activity_devicepositon_title">Device Position</string>
    <string name="activity_devicepositon_select">Select Device Position</string>
    <string name="activity_devicepositon_none">Not Specified</string>
    <string name="activity_devicepositon_head">Head</string>
    <string name="activity_devicepositon_upperarm">Upper Arm</string>
    <string name="activity_devicepositon_forearm">Forearm</string>
    <string name="activity_devicepositon_thigh">Thigh</string>
    <string name="activity_devicepositon_shin">Shin</string>
    <string name="activity_devicepositon_waist">Waist</string>
    <string name="activity_devicepositon_hip">Hip</string>
    <string name="activity_devicepositon_hand">Hand</string>
    <string name="activity_devicepositon_chest">Chest</string>
    <string name="activity_activities_title">Activities</string>
    <string name="activity_activities_select">Select Activity</string>
    <string name="activity_activities_add">Add Activity</string>
    <string name="activity_activities_exist">Activity already exists!</string>
    <string name="activity_activities_sleeping">Sleeping</string>
    <string name="activity_activities_eating">Eating/Drinking</string>
    <string name="activity_activities_personal">Personal Grooming</string>
    <string name="activity_activities_transportation">Transportation</string>
    <string name="activity_activities_relaxing">Relaxing</string>
    <string name="activity_activities_functional">Functional mobility</string>
    <string name="activity_activities_medication">Take Medication</string>
    <string name="activity_activities_shopping">Shopping</string>
    <string name="activity_activities_housework">Housework</string>
    <string name="activity_activities_preparation">Meal preparation</string>
    <string name="activity_activities_socializing">Socializing</string>
    <string name="activity_activities_movement">Movement</string>
    <string name="activity_activities_deskwork">Desk Work</string>
    <string name="activity_activities_sport">Sport</string>
    <string name="activity_activities_dialog_activity">Activity:</string>
    <string name="activity_activities_dialog_subactivity">Subactivity:</string>
    <string name="activity_subactivities_salad">Salad</string>
    <string name="activity_subactivities_kebab">Kebab</string>
    <string name="activity_subactivities_pizza">Pizza</string>
    <string name="activity_subactivities_cleaning">Cleaning</string>
    <string name="activity_subactivities_vacuum">Tidying Up</string>
    <string name="activity_subactivities_cutting">cutting vegetables</string>
    <string name="activity_subactivities_walk">Go for a Walk</string>
    <string name="activity_subactivities_bus">Bus</string>
    <string name="activity_subactivities_car">Car</string>
    <string name="activity_correction_dialog_add_from">From</string>
    <string name="activity_correction_dialog_add_to">To</string>
    <string name="activity_correction_dialog_add_text1">Labeling of the &#8230;</string>
    <string name="activity_correction_dialog_add_text2">&#8230; is invalid</string>
    <string name="activity_correction_dialog_add_environment">Environment</string>
    <string name="activity_correction_dialog_add_posture">Posture</string>
    <string name="activity_correction_dialog_add_device">Device Position</string>
    <string name="activity_correction_dialog_add_activity">Activity</string>
    <string name="analyze_analyze_database_dialog_from">From</string>
    <string name="analyze_analyze_database_dialog_to">To</string>
    <string name="analyze_analyze_database_dialog_position">Show Positions</string>
    <string name="analyze_analyze_database_dialog_posture">Show Postures</string>
    <string name="analyze_analyze_database_dialog_activity">Show Activities</string>
    <string name="option_export_title">Database</string>
    <string name="option_export_delete">Delete database</string>
    <string name="option_export_delete_desc">Deletes absolute everything</string>
    <string name="option_export_copy">Save database</string>
    <string name="option_export_copy_desc">Copy sqlite database file to SD-Card</string>
    <string name="option_export_export">Export tables (CSV)</string>
    <string name="option_export_export_desc">Convert SQLite tables to CSV files</string>
    <string name="option_about_title">About</string>
    <string name="option_about_version">Version</string>
    <string name="option_about_version_description">1.5.21</string>
    <string name="option_about_developer">Developer</string>
    <string name="option_about_developer_description">Timo Sztyler (2014&#8212;2017), Fabian Kramm (2014)</string>
    <string name="option_about_institution">Institution</string>
    <string name="option_about_institution_description">University of Mannheim</string>
    <string name="sensors_preferences_category">Sensors</string>
    <string name="sensor_lowpass_title">Low-pass Filter (Accelerometer)</string>
    <string name="sensor_lowpass_desc">Separates the gravity and linear acceleration</string>
    <string name="sensor_frequency_title">Default Frequency</string>
    <string name="sensor_frequency_desc">Does not affect the microphone and GPS sensors</string>
    <string name="preferences_watch_category">Remote Devices</string>
    <string name="preferences_watch_sensorenabled">Collect sensor data</string>
    <string name="preferences_watch_sensorenabled_desc">Sends all commands also to the remote devices</string>
    <string name="preferences_watch_directenabled">Transfer immediately</string>
    <string name="preferences_watch_directenabled_desc">Remote collected data is directly transfered (No caching)</string>
    <string name="preferences_plotter_enabled">Live Plotter</string>
    <string name="preferences_plotter_enabled_desc">Should be disabled if there are performance issues</string>
</resources>