<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <TextView
        android:id="@+id/ssthead"
	    android:layout_width="fill_parent"
	    android:layout_height="wrap_content"
	    android:paddingTop="3dip"
	    android:paddingBottom="3dip"
	    android:paddingLeft="7dip"
	    android:paddingEnd="7dip"
        android:paddingRight="7dip"
	    android:background="#3E3D3D"
        android:textColor="@color/white"
        android:textAppearance="?android:attr/listSeparatorTextViewStyle" />

    <TextView
        android:id="@+id/acc"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:text="@string/sensor_selftest_calc" />

    <TextView
        android:id="@+id/axex"
        android:text="@string/sensor_selftest_x"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/axey"
        android:text="@string/sensor_selftest_y"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />

    <TextView
        android:id="@+id/axez"
        android:text="@string/sensor_selftest_z"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content" />
</LinearLayout>