<menu xmlns:android="http://schemas.android.com/apk/res/android"
      xmlns:app="http://schemas.android.com/apk/res-auto" >

    <item
        android:id="@+id/action_sensoren"
        android:icon="@drawable/ic_action_computer"
        android:title="@string/app_icon_antenna"
        app:showAsAction="always"
    />
    <item
        android:id="@+id/action_analyze"
        android:icon="@drawable/ic_action_cloud"
        android:title="@string/app_icon_statistics"
        app:showAsAction="always"
        />
    <item
        android:id="@+id/action_options"
        android:icon="@drawable/ic_action_settings"
        android:title="@string/app_icon_services"
        app:showAsAction="always"
        />

    <!--<item-->
        <!--android:id="@+id/menu_createactivity"-->
        <!--android:orderInCategory="300"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/activity_create3"-->
        <!--/>-->
    <!--<item-->
        <!--android:id="@+id/menu_createsubactivity"-->
        <!--android:orderInCategory="300"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/activity_create4"-->
        <!--/>-->
    <!--<item-->
        <!--android:id="@+id/menu_createposition"-->
        <!--android:orderInCategory="300"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/activity_create5"-->
        <!--/>-->
    <!--<item-->
        <!--android:id="@+id/menu_createposture"-->
        <!--android:orderInCategory="300"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/activity_create6"-->
        <!--/>-->

    <!--<item-->
        <!--android:id="@+id/menu_deleteactivity"-->
        <!--android:orderInCategory="300"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/activity_delete2"-->
        <!--/>-->
    <!--<item-->
        <!--android:id="@+id/menu_deletesubactivity"-->
        <!--android:orderInCategory="300"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/activity_delete3"-->
        <!--/>-->
    <!--<item-->
        <!--android:id="@+id/menu_deleteposition"-->
        <!--android:orderInCategory="300"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/activity_delete4"-->
        <!--/>-->
    <!--<item-->
        <!--android:id="@+id/menu_deleteposture"-->
        <!--android:orderInCategory="300"-->
        <!--app:showAsAction="never"-->
        <!--android:title="@string/activity_delete5"-->
        <!--/>-->
</menu>