<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

        <TextView
            android:id="@+id/correctionfromlabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_alignParentTop="true"
            android:text="@string/activity_correction_dialog_add_from"/>

        <EditText
            android:id="@+id/correctionfromdate"
            android:labelFor="@+id/correctionfromdate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/correctionfromlabel"
            android:ems="8"
            android:inputType="none"/>

        <EditText
            android:id="@+id/correctionfromtime"
            android:labelFor="@+id/correctionfromtime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/correctionfromlabel"
            android:ems="6"
            android:inputType="none"/>

        <TextView
            android:id="@+id/correctiontolabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/correctionfromdate"
            android:text="@string/activity_correction_dialog_add_to"/>

        <EditText
            android:id="@+id/correctiontodate"
            android:labelFor="@+id/correctiontodate"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/correctiontolabel"
            android:ems="8"
            android:inputType="none"/>

        <EditText
            android:id="@+id/correctiontotime"
            android:labelFor="@+id/correctiontotime"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/correctiontolabel"
            android:ems="6"
            android:inputType="none"/>

    </RelativeLayout>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_margin="10dp"
                    android:layout_gravity="fill"
                    android:background="@drawable/border2">

        <TextView
            android:id="@+id/choosetext1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:text="@string/activity_correction_dialog_add_text1"/>

        <TextView
            android:id="@+id/markEnvironmentLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/choosetext1"
            android:layout_marginTop="5dp"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:text="@string/activity_correction_dialog_add_environment"/>

        <CheckBox
            android:id="@+id/markEnvironmentChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/choosetext1"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/markPosturesLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/markEnvironmentChkBx"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:text="@string/activity_correction_dialog_add_posture"/>

        <CheckBox
            android:id="@+id/markPosturesChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/markEnvironmentChkBx"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/markDeviceLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/markPosturesChkBx"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:text="@string/activity_correction_dialog_add_device"/>

        <CheckBox
            android:id="@+id/markDeviceChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/markPosturesChkBx"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/markActivityLabel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/markDeviceChkBx"
            android:layout_marginStart="50dp"
            android:layout_marginLeft="50dp"
            android:textStyle="bold"
            android:text="@string/activity_correction_dialog_add_activity"/>

        <CheckBox
            android:id="@+id/markActivityChkBx"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/markDeviceChkBx"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"/>

        <TextView
            android:id="@+id/choosetext2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textSize="18sp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_below="@+id/markActivityLabel"
            android:layout_marginTop="5dp"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginBottom="10dp"
            android:layout_gravity="fill"
            android:text="@string/activity_correction_dialog_add_text2"/>

    </RelativeLayout>

</LinearLayout>