<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <TextView
        android:id="@+id/databasefromlabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:text="@string/analyze_analyze_database_dialog_from" />
    
    <EditText
        android:id="@+id/databasefromdate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/databasefromlabel"
        android:ems="8"
        android:inputType="none" />

    <EditText
        android:id="@+id/databasefromtime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/databasefromlabel"
        android:ems="6"
        android:inputType="none" />
    
    <TextView
        android:id="@+id/databasetolabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/databasefromdate"
        android:text="@string/analyze_analyze_database_dialog_to" />

    <EditText
        android:id="@+id/databasetodate"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/databasetolabel"
        android:ems="8"
        android:inputType="none" />

    <EditText
        android:id="@+id/databasetotime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/databasetolabel"
        android:ems="6"
        android:inputType="none" />

    <TextView
        android:id="@+id/showPositionsLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/databasetodate"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/analyze_analyze_database_dialog_position" />

    <CheckBox
        android:id="@+id/showPositionsChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/databasetodate"
        android:layout_marginTop="30dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />

    <TextView
        android:id="@+id/showPosturesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/showPositionsChkBx"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:text="@string/analyze_analyze_database_dialog_posture" />

    <CheckBox
        android:id="@+id/showPosturesChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/showPositionsChkBx"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" />
    
    <TextView
        android:id="@+id/showActivitiesLabel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="20sp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/showPosturesChkBx"
        android:layout_marginTop="5dp"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:layout_marginBottom="10dp"
        android:layout_gravity="fill"
        android:text="@string/analyze_analyze_database_dialog_activity" />
    
    <CheckBox
        android:id="@+id/showActivitiesChkBx"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:layout_below="@+id/showPosturesChkBx"
        android:layout_marginTop="5dp"
        android:layout_marginRight="10dp"
        android:layout_marginEnd="10dp" 
        android:layout_marginBottom="10dp"/>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:background="#3E80B4"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/btn_yes"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="Yes"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_no"
            android:layout_width="100dp"
            android:layout_height="30dp"
            android:layout_marginLeft="5dp"
            android:background="@android:color/white"
            android:clickable="true"
            android:text="No"
            android:textColor="#5DBCD2"
            android:textStyle="bold" />
    </LinearLayout>
</RelativeLayout>